--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 !.gitattributes
 !.gitignore
 !/cheat/cheat.7z
-!/ctrlr/xbox-fightstick*
+!/ctrlr/xbox-fightstick*.cfg
+!/ctrlr/8bitdo.cfg
 !/ends/ends.7z
 !/flyers/flyers.7z
 !/glsl/CRT-Scanlines*
