--- a/mame.ini
+++ b/mame.ini
@@ -126,7 +126,7 @@ speaker_report            0
 # CORE INPUT OPTIONS
 #
 coin_lockout              1
-ctrlr                     xbox-fightstick
+ctrlr                     8bitdo
 mouse                     0
 joystick                  1
 lightgun                  0
@@ -183,7 +183,7 @@ drc_log_uml               0
 drc_log_native            0
 bios                      
 cheat                     0
-skip_gameinfo             0
+skip_gameinfo             1
 uifont                    default
 ui                        cabinet
 ramsize                   
@@ -364,7 +364,7 @@ attach_window
 # DIRECT3D POST-PROCESSING OPTIONS
 #
 hlslpath                  hlsl
-hlsl_enable               0
+hlsl_enable               1
 hlsl_oversampling         0
 hlsl_write                auto
 hlsl_snap_width           2048
