--- a/mame.ini
+++ b/mame.ini
@@ -36,17 +36,17 @@ comment_directory         comments
 #
 # CORE STATE/PLAYBACK OPTIONS
 #
-state                     
+state
 autosave                  0
 rewind                    0
 rewind_capacity           100
-playback                  
-record                    
+playback
+record
 record_timecode           0
 exit_after_playback       0
-mngwrite                  
-aviwrite                  
-wavwrite                  
+mngwrite
+aviwrite
+wavwrite
 snapname                  %g/%i
 snapsize                  auto
 snapview                  auto
@@ -93,8 +93,8 @@ flipy                     0
 # CORE ARTWORK OPTIONS
 #
 artwork_crop              0
-fallback_artwork          
-override_artwork          
+fallback_artwork
+override_artwork
 
 #
 # CORE SCREEN OPTIONS
@@ -162,7 +162,7 @@ log                       0
 oslog                     0
 debug                     0
 update_in_pause           0
-debugscript               
+debugscript
 debuglog                  0
 
 #
@@ -181,12 +181,12 @@ drc                       1
 drc_use_c                 0
 drc_log_uml               0
 drc_log_native            0
-bios                      
+bios
 cheat                     0
 skip_gameinfo             1
 uifont                    default
 ui                        cabinet
-ramsize                   
+ramsize
 confirm_quit              0
 ui_mouse                  1
 language                  English
@@ -195,13 +195,13 @@ nvram_save                1
 #
 # SCRIPTING OPTIONS
 #
-autoboot_command          
+autoboot_command
 autoboot_delay            0
-autoboot_script           
+autoboot_script
 console                   0
 plugins                   1
-plugin                    
-noplugin                  
+plugin
+noplugin
 
 #
 # HTTP SERVER OPTIONS
@@ -251,7 +251,7 @@ bench                     0
 #
 # OSD VIDEO OPTIONS
 #
-video                     auto
+video                     opengl
 numscreens                1
 window                    1
 maximize                  1
@@ -303,8 +303,8 @@ gl_vbo                    1
 gl_pbo                    1
 gl_glsl                   1
 gl_glsl_filter            1
-glsl_shader_mame0         ../glsl/glsl_plain
-glsl_shader_mame1         ../glsl/CRT-Scanlines
+glsl_shader_mame0         glsl/glsl_plain
+glsl_shader_mame1         glsl/glsl_crt
 glsl_shader_mame2         none
 glsl_shader_mame3         none
 glsl_shader_mame4         none
@@ -345,7 +345,7 @@ bgfx_backend              auto
 bgfx_debug                0
 bgfx_screen_chains        default
 bgfx_shadow_mask          slot-mask.png
-bgfx_lut                  
+bgfx_lut
 bgfx_avi_name             auto
 
 #
@@ -358,7 +358,7 @@ profile                   0
 # WINDOWS VIDEO OPTIONS
 #
 menu                      0
-attach_window             
+attach_window
 
 #
 # DIRECT3D POST-PROCESSING OPTIONS
@@ -453,9 +453,9 @@ bloom_lvl5_weight         0.06
 bloom_lvl6_weight         0.04
 bloom_lvl7_weight         0.02
 bloom_lvl8_weight         0.01
-lut_texture               
+lut_texture
 lut_enable                0
-ui_lut_texture            
+ui_lut_texture
 ui_lut_enable             0
 
 #
