--- a/ctrlr/8bitdo.cfg
+++ b/ctrlr/8bitdo.cfg
@@ -48,12 +48,12 @@
             </port>
             <port type="P1_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON6 OR KEYCODE_J
+                    JOYCODE_1_BUTTON6 OR JOYCODE_1_BUTTON11 OR KEYCODE_J
                 </newseq>
             </port>
             <port type="P1_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON1 OR JOYCODE_1_BUTTON5 OR KEYCODE_K OR KEYCODE_B
+                    JOYCODE_1_BUTTON1 OR JOYCODE_1_BUTTON5 OR JOYCODE_1_BUTTON10 OR KEYCODE_K OR KEYCODE_B
                 </newseq>
             </port>
             <port type="P1_BUTTON5">
@@ -63,7 +63,7 @@
             </port>
             <port type="P1_BUTTON6">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON7 OR KEYCODE_M
+                    JOYCODE_1_BUTTON7 OR JOYCODE_1_RZAXIS_POS_SWITCH OR KEYCODE_M
                 </newseq>
             </port>
 
