--- a/ctrlr/8bitdo-neogeo.cfg
+++ b/ctrlr/8bitdo-neogeo.cfg
@@ -8,52 +8,103 @@
 
             <port tag="P1_START" type="START1">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON9 OR KEYCODE_1
+                    JOYCODE_1_BUTTON7 OR KEYCODE_1
                 </newseq>
             </port>
             <port tag="P1_COIN" type="COIN1">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON10 OR KEYCODE_5
+                    JOYCODE_1_BUTTON8 OR KEYCODE_5
                 </newseq>
             </port>
             <port type="P1_JOYSTICK_UP">
                 <newseq type="standard">
-                    JOYCODE_1_YAXIS_UP_SWITCH OR JOYCODE_1_BUTTON12 OR KEYCODE_W
+                    JOYCODE_1_DPADUP OR JOYCODE_1_BUTTON12 OR KEYCODE_W
                 </newseq>
             </port>
             <port type="P1_JOYSTICK_DOWN">
                 <newseq type="standard">
-                    JOYCODE_1_YAXIS_DOWN_SWITCH OR JOYCODE_1_BUTTON13 OR KEYCODE_S
+                    JOYCODE_1_DPADDOWN OR JOYCODE_1_BUTTON13 OR KEYCODE_S
                 </newseq>
             </port>
             <port type="P1_JOYSTICK_LEFT">
                 <newseq type="standard">
-                    JOYCODE_1_XAXIS_LEFT_SWITCH OR JOYCODE_1_BUTTON14 OR KEYCODE_A
+                    JOYCODE_1_DPADLEFT OR JOYCODE_1_BUTTON14 OR KEYCODE_A
                 </newseq>
             </port>
             <port type="P1_JOYSTICK_RIGHT">
                 <newseq type="standard">
-                    JOYCODE_1_XAXIS_RIGHT_SWITCH OR JOYCODE_1_BUTTON15 OR KEYCODE_D
+                    JOYCODE_1_DPADRIGHT OR JOYCODE_1_BUTTON15 OR KEYCODE_D
                 </newseq>
             </port>
             <port type="P1_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON1 OR KEYCODE_B
+                    JOYCODE_1_BUTTON1 OR KEYCODE_M 
                 </newseq>
             </port>
             <port type="P1_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON3 OR KEYCODE_H
+                    JOYCODE_1_BUTTON3 OR KEYCODE_K
                 </newseq>
             </port>
             <port type="P1_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON4 OR KEYCODE_J
+                    JOYCODE_1_BUTTON4 OR KEYCODE_L
                 </newseq>
             </port>
             <port type="P1_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON11 OR KEYCODE_K
+                    JOYCODE_1_BUTTON6 OR KEYCODE_COLON
+                </newseq>
+            </port>
+
+            <port tag="P2_START" type="START1">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON7 OR KEYCODE_1
+                </newseq>
+            </port>
+            <port tag="P2_COIN" type="COIN1">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON8 OR KEYCODE_5
+                </newseq>
+            </port>
+            <port type="P2_JOYSTICK_UP">
+                <newseq type="standard">
+                    JOYCODE_1_DPADUP OR JOYCODE_1_BUTTON12 OR KEYCODE_W
+                </newseq>
+            </port>
+            <port type="P2_JOYSTICK_DOWN">
+                <newseq type="standard">
+                    JOYCODE_1_DPADDOWN OR JOYCODE_1_BUTTON13 OR KEYCODE_S
+                </newseq>
+            </port>
+            <port type="P2_JOYSTICK_LEFT">
+                <newseq type="standard">
+                    JOYCODE_1_DPADLEFT OR JOYCODE_1_BUTTON14 OR KEYCODE_A
+                </newseq>
+            </port>
+            <port type="P2_JOYSTICK_RIGHT">
+                <newseq type="standard">
+                    JOYCODE_1_DPADRIGHT OR JOYCODE_1_BUTTON15 OR KEYCODE_D
+                </newseq>
+            </port>
+            <port type="P2_BUTTON1">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON1 OR KEYCODE_M 
+                </newseq>
+            </port>
+            <port type="P2_BUTTON2">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON3 OR KEYCODE_K
+                </newseq>
+            </port>
+            <port type="P2_BUTTON3">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON4 OR KEYCODE_L
+                </newseq>
+            </port>
+            <port type="P2_BUTTON4">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON6 OR KEYCODE_COLON
                 </newseq>
             </port>
 
