--- a/ctrlr/8bitdo.cfg
+++ b/ctrlr/8bitdo.cfg
@@ -8,245 +8,245 @@
 
             <port tag="P1_START" type="START1">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON9 OR KEYCODE_1
+                    JOYCODE_1_BUTTON7 OR KEYCODE_1
                 </newseq>
             </port>
             <port tag="P1_COIN" type="COIN1">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON10 OR KEYCODE_5
+                    JOYCODE_1_BUTTON8 OR KEYCODE_5
                 </newseq>
             </port>
             <port type="P1_JOYSTICK_UP">
                 <newseq type="standard">
-                    JOYCODE_1_YAXIS_UP_SWITCH OR JOYCODE_1_BUTTON12 OR KEYCODE_W
+                    JOYCODE_1_DPADUP OR JOYCODE_1_BUTTON12 OR KEYCODE_W
                 </newseq>
             </port>
             <port type="P1_JOYSTICK_DOWN">
                 <newseq type="standard">
-                    JOYCODE_1_YAXIS_DOWN_SWITCH OR JOYCODE_1_BUTTON13 OR KEYCODE_S
+                    JOYCODE_1_DPADDOWN OR JOYCODE_1_BUTTON13 OR KEYCODE_S
                 </newseq>
             </port>
             <port type="P1_JOYSTICK_LEFT">
                 <newseq type="standard">
-                    JOYCODE_1_XAXIS_LEFT_SWITCH OR JOYCODE_1_BUTTON14 OR KEYCODE_A
+                    JOYCODE_1_DPADLEFT OR JOYCODE_1_BUTTON14 OR KEYCODE_A
                 </newseq>
             </port>
             <port type="P1_JOYSTICK_RIGHT">
                 <newseq type="standard">
-                    JOYCODE_1_XAXIS_RIGHT_SWITCH OR JOYCODE_1_BUTTON15 OR KEYCODE_D
+                    JOYCODE_1_DPADRIGHT OR JOYCODE_1_BUTTON15 OR KEYCODE_D
                 </newseq>
             </port>
             <port type="P1_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON3 OR KEYCODE_G
+                    JOYCODE_1_BUTTON3 OR KEYCODE_K
                 </newseq>
             </port>
             <port type="P1_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON4 OR KEYCODE_H
+                    JOYCODE_1_BUTTON4 OR KEYCODE_L
                 </newseq>
             </port>
             <port type="P1_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON6 OR JOYCODE_1_BUTTON11 OR KEYCODE_J
+                    JOYCODE_1_BUTTON6 OR KEYCODE_COLON
                 </newseq>
             </port>
             <port type="P1_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON1 OR JOYCODE_1_BUTTON5 OR JOYCODE_1_BUTTON10 OR KEYCODE_K OR KEYCODE_B
+                    JOYCODE_1_BUTTON1 OR KEYCODE_M OR JOYCODE_1_BUTTON5 OR KEYCODE_QUOTE
                 </newseq>
             </port>
             <port type="P1_BUTTON5">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON2 OR KEYCODE_N
+                    JOYCODE_1_BUTTON2 OR KEYCODE_COMMA
                 </newseq>
             </port>
             <port type="P1_BUTTON6">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON7 OR JOYCODE_1_RZAXIS_POS_SWITCH OR KEYCODE_M
+                    JOYCODE_1_ZAXIS_NEG_SWITCH OR KEYCODE_STOP
                 </newseq>
             </port>
 
-            <port tag="P2_START" type="START2">
+            <port tag="P2_START" type="START1">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON9 OR KEYCODE_2
+                    JOYCODE_1_BUTTON7 OR KEYCODE_1
                 </newseq>
             </port>
-            <port tag="P2_COIN" type="COIN2">
+            <port tag="P2_COIN" type="COIN1">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON10 OR KEYCODE_6
+                    JOYCODE_1_BUTTON8 OR KEYCODE_5
                 </newseq>
             </port>
             <port type="P2_JOYSTICK_UP">
                 <newseq type="standard">
-                    JOYCODE_2_YAXIS_UP_SWITCH OR JOYCODE_2_BUTTON12 OR KEYCODE_UP
+                    JOYCODE_1_DPADUP OR JOYCODE_1_BUTTON12 OR KEYCODE_W
                 </newseq>
             </port>
             <port type="P2_JOYSTICK_DOWN">
                 <newseq type="standard">
-                    JOYCODE_2_YAXIS_DOWN_SWITCH OR JOYCODE_2_BUTTON13 OR KEYCODE_DOWN
+                    JOYCODE_1_DPADDOWN OR JOYCODE_1_BUTTON13 OR KEYCODE_S
                 </newseq>
             </port>
             <port type="P2_JOYSTICK_LEFT">
                 <newseq type="standard">
-                    JOYCODE_2_XAXIS_LEFT_SWITCH OR JOYCODE_2_BUTTON14 OR KEYCODE_LEFT
+                    JOYCODE_1_DPADLEFT OR JOYCODE_1_BUTTON14 OR KEYCODE_A
                 </newseq>
             </port>
             <port type="P2_JOYSTICK_RIGHT">
                 <newseq type="standard">
-                    JOYCODE_2_XAXIS_RIGHT_SWITCH OR JOYCODE_2_BUTTON15 OR KEYCODE_RIGHT
+                    JOYCODE_1_DPADRIGHT OR JOYCODE_1_BUTTON15 OR KEYCODE_D
                 </newseq>
             </port>
             <port type="P2_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON3 OR KEYCODE_4PAD OR KEYCODE_R
+                    JOYCODE_1_BUTTON3 OR KEYCODE_K
                 </newseq>
             </port>
             <port type="P2_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON4 OR KEYCODE_5PAD OR KEYCODE_T
+                    JOYCODE_1_BUTTON4 OR KEYCODE_L
                 </newseq>
             </port>
             <port type="P2_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON6 OR KEYCODE_6PAD OR KEYCODE_Y
+                    JOYCODE_1_BUTTON6 OR KEYCODE_COLON
                 </newseq>
             </port>
             <port type="P2_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON1 OR JOYCODE_2_BUTTON5 OR KEYCODE_1PAD OR KEYCODE_PLUSPAD OR KEYCODE_U
+                    JOYCODE_1_BUTTON1 OR KEYCODE_M OR JOYCODE_1_BUTTON5 OR KEYCODE_QUOTE
                 </newseq>
             </port>
             <port type="P2_BUTTON5">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON2 OR KEYCODE_2PAD OR KEYCODE_I
+                    JOYCODE_1_BUTTON2 OR KEYCODE_COMMA
                 </newseq>
             </port>
             <port type="P2_BUTTON6">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON7 OR KEYCODE_3PAD OR KEYCODE_O
+                    JOYCODE_1_ZAXIS_NEG_SWITCH OR KEYCODE_STOP
                 </newseq>
             </port>
 
-            <port tag="P3_START" type="START3">
+            <port tag="P3_START" type="START1">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON9 OR KEYCODE_3
+                    JOYCODE_1_BUTTON7 OR KEYCODE_1
                 </newseq>
             </port>
-            <port tag="P3_COIN" type="COIN3">
+            <port tag="P3_COIN" type="COIN1">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON10 OR KEYCODE_7
+                    JOYCODE_1_BUTTON8 OR KEYCODE_5
                 </newseq>
             </port>
             <port type="P3_JOYSTICK_UP">
                 <newseq type="standard">
-                    JOYCODE_3_YAXIS_UP_SWITCH OR JOYCODE_3_BUTTON12
+                    JOYCODE_1_DPADUP OR JOYCODE_1_BUTTON12 OR KEYCODE_W
                 </newseq>
             </port>
             <port type="P3_JOYSTICK_DOWN">
                 <newseq type="standard">
-                    JOYCODE_3_YAXIS_DOWN_SWITCH OR JOYCODE_3_BUTTON13
+                    JOYCODE_1_DPADDOWN OR JOYCODE_1_BUTTON13 OR KEYCODE_S
                 </newseq>
             </port>
             <port type="P3_JOYSTICK_LEFT">
                 <newseq type="standard">
-                    JOYCODE_3_XAXIS_LEFT_SWITCH OR JOYCODE_3_BUTTON14
+                    JOYCODE_1_DPADLEFT OR JOYCODE_1_BUTTON14 OR KEYCODE_A
                 </newseq>
             </port>
             <port type="P3_JOYSTICK_RIGHT">
                 <newseq type="standard">
-                    JOYCODE_3_XAXIS_RIGHT_SWITCH OR JOYCODE_3_BUTTON15
+                    JOYCODE_1_DPADRIGHT OR JOYCODE_1_BUTTON15 OR KEYCODE_D
                 </newseq>
             </port>
             <port type="P3_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON3
+                    JOYCODE_1_BUTTON3 OR KEYCODE_K
                 </newseq>
             </port>
             <port type="P3_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON4
+                    JOYCODE_1_BUTTON4 OR KEYCODE_L
                 </newseq>
             </port>
             <port type="P3_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON6
+                    JOYCODE_1_BUTTON6 OR KEYCODE_COLON
                 </newseq>
             </port>
             <port type="P3_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON1 OR JOYCODE_3_BUTTON5
+                    JOYCODE_1_BUTTON1 OR KEYCODE_M OR JOYCODE_1_BUTTON5 OR KEYCODE_QUOTE
                 </newseq>
             </port>
             <port type="P3_BUTTON5">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON2
+                    JOYCODE_1_BUTTON2 OR KEYCODE_COMMA
                 </newseq>
             </port>
             <port type="P3_BUTTON6">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON7
+                    JOYCODE_1_ZAXIS_NEG_SWITCH OR KEYCODE_STOP
                 </newseq>
             </port>
 
-            <port tag="P4_START" type="START4">
+            <port tag="P4_START" type="START1">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON9 OR KEYCODE_4
+                    JOYCODE_1_BUTTON7 OR KEYCODE_1
                 </newseq>
             </port>
-            <port tag="P4_COIN" type="COIN4">
+            <port tag="P4_COIN" type="COIN1">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON10 OR KEYCODE_8
+                    JOYCODE_1_BUTTON8 OR KEYCODE_5
                 </newseq>
             </port>
             <port type="P4_JOYSTICK_UP">
                 <newseq type="standard">
-                    JOYCODE_4_YAXIS_UP_SWITCH OR JOYCODE_4_BUTTON12
+                    JOYCODE_1_DPADUP OR JOYCODE_1_BUTTON12 OR KEYCODE_W
                 </newseq>
             </port>
             <port type="P4_JOYSTICK_DOWN">
                 <newseq type="standard">
-                    JOYCODE_4_YAXIS_DOWN_SWITCH OR JOYCODE_4_BUTTON13
+                    JOYCODE_1_DPADDOWN OR JOYCODE_1_BUTTON13 OR KEYCODE_S
                 </newseq>
             </port>
             <port type="P4_JOYSTICK_LEFT">
                 <newseq type="standard">
-                    JOYCODE_4_XAXIS_LEFT_SWITCH OR JOYCODE_4_BUTTON14
+                    JOYCODE_1_DPADLEFT OR JOYCODE_1_BUTTON14 OR KEYCODE_A
                 </newseq>
             </port>
             <port type="P4_JOYSTICK_RIGHT">
                 <newseq type="standard">
-                    JOYCODE_4_XAXIS_RIGHT_SWITCH OR JOYCODE_4_BUTTON15
+                    JOYCODE_1_DPADRIGHT OR JOYCODE_1_BUTTON15 OR KEYCODE_D
                 </newseq>
             </port>
             <port type="P4_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON3
+                    JOYCODE_1_BUTTON3 OR KEYCODE_K
                 </newseq>
             </port>
             <port type="P4_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON4
+                    JOYCODE_1_BUTTON4 OR KEYCODE_L
                 </newseq>
             </port>
             <port type="P4_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON6
+                    JOYCODE_1_BUTTON6 OR KEYCODE_COLON
                 </newseq>
             </port>
             <port type="P4_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON1 OR JOYCODE_4_BUTTON5
+                    JOYCODE_1_BUTTON1 OR KEYCODE_M OR JOYCODE_1_BUTTON5 OR KEYCODE_QUOTE
                 </newseq>
             </port>
             <port type="P4_BUTTON5">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON2
+                    JOYCODE_1_BUTTON2 OR KEYCODE_COMMA
                 </newseq>
             </port>
             <port type="P4_BUTTON6">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON7
+                    JOYCODE_1_ZAXIS_NEG_SWITCH OR KEYCODE_STOP
                 </newseq>
             </port>
 
