--- a/mame.ini
+++ b/mame.ini
@@ -37,7 +37,7 @@ comment_directory         comments
 # CORE STATE/PLAYBACK OPTIONS
 #
 state
-autosave                  0
+autosave                  1
 rewind                    0
 rewind_capacity           100
 playback
@@ -304,7 +304,7 @@ gl_pbo                    1
 gl_glsl                   1
 gl_glsl_filter            1
 glsl_shader_mame0         glsl/glsl_plain
-glsl_shader_mame1         glsl/glsl_crt
+;glsl_shader_mame1         glsl/glsl_crt
 glsl_shader_mame2         none
 glsl_shader_mame3         none
 glsl_shader_mame4         none
