Improve input layout

--- a/ctrlr/8bitdo-neogeo.cfg
+++ b/ctrlr/8bitdo-neogeo.cfg
@@ -38,73 +38,73 @@
             </port>
             <port type="P1_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON1 OR KEYCODE_M 
+                    JOYCODE_1_BUTTON1 OR KEYCODE_G 
                 </newseq>
             </port>
             <port type="P1_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON3 OR KEYCODE_K
+                    JOYCODE_1_BUTTON3 OR KEYCODE_H
                 </newseq>
             </port>
             <port type="P1_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON4 OR KEYCODE_L
+                    JOYCODE_1_BUTTON4 OR KEYCODE_J
                 </newseq>
             </port>
             <port type="P1_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON6 OR KEYCODE_COLON
+                    JOYCODE_1_BUTTON6 OR KEYCODE_K
                 </newseq>
             </port>
 
-            <port tag="P2_START" type="START1">
+            <port tag="P2_START" type="START2">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON7 OR KEYCODE_1
+                    JOYCODE_1_BUTTON7 OR KEYCODE_2
                 </newseq>
             </port>
-            <port tag="P2_COIN" type="COIN1">
+            <port tag="P2_COIN" type="COIN2">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON8 OR KEYCODE_5
+                    JOYCODE_1_BUTTON8 OR KEYCODE_6
                 </newseq>
             </port>
             <port type="P2_JOYSTICK_UP">
                 <newseq type="standard">
-                    JOYCODE_1_DPADUP OR JOYCODE_1_BUTTON12 OR KEYCODE_W
+                    JOYCODE_1_DPADUP OR JOYCODE_1_BUTTON12 OR KEYCODE_UP
                 </newseq>
             </port>
             <port type="P2_JOYSTICK_DOWN">
                 <newseq type="standard">
-                    JOYCODE_1_DPADDOWN OR JOYCODE_1_BUTTON13 OR KEYCODE_S
+                    JOYCODE_1_DPADDOWN OR JOYCODE_1_BUTTON13 OR KEYCODE_DOWN
                 </newseq>
             </port>
             <port type="P2_JOYSTICK_LEFT">
                 <newseq type="standard">
-                    JOYCODE_1_DPADLEFT OR JOYCODE_1_BUTTON14 OR KEYCODE_A
+                    JOYCODE_1_DPADLEFT OR JOYCODE_1_BUTTON14 OR KEYCODE_LEFT
                 </newseq>
             </port>
             <port type="P2_JOYSTICK_RIGHT">
                 <newseq type="standard">
-                    JOYCODE_1_DPADRIGHT OR JOYCODE_1_BUTTON15 OR KEYCODE_D
+                    JOYCODE_1_DPADRIGHT OR JOYCODE_1_BUTTON15 OR KEYCODE_RIGHT
                 </newseq>
             </port>
             <port type="P2_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON1 OR KEYCODE_M 
+                    JOYCODE_1_BUTTON1 OR KEYCODE_4PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON3 OR KEYCODE_K
+                    JOYCODE_1_BUTTON3 OR KEYCODE_5PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON4 OR KEYCODE_L
+                    JOYCODE_1_BUTTON4 OR KEYCODE_6PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON6 OR KEYCODE_COLON
+                    JOYCODE_1_BUTTON6 OR KEYCODE_PLUSPAD
                 </newseq>
             </port>
 
