--- a/mame.ini
+++ b/mame.ini
@@ -126,7 +126,7 @@ speaker_report            0
 # CORE INPUT OPTIONS
 #
 coin_lockout              1
-ctrlr                     8bitdo
+ctrlr                     8bitdo-as
 mouse                     0
 joystick                  1
 lightgun                  0
