Update 8BitDo Pro 2 controller profiles

--- a/ctrlr/8bitdo-pro2-neogeo.cfg
+++ b/ctrlr/8bitdo-pro2-neogeo.cfg
@@ -37,22 +37,22 @@
             </port>
             <port type="P1_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON4 OR KEYCODE_G
+                    JOYCODE_1_BUTTON3 OR KEYCODE_G
                 </newseq>
             </port>
             <port type="P1_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON2 OR KEYCODE_H
+                    JOYCODE_1_BUTTON1 OR KEYCODE_B
                 </newseq>
             </port>
             <port type="P1_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON3 OR KEYCODE_J
+                    JOYCODE_1_BUTTON4 OR KEYCODE_H
                 </newseq>
             </port>
             <port type="P1_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON1 OR KEYCODE_K
+                    JOYCODE_1_BUTTON2 OR KEYCODE_N
                 </newseq>
             </port>
 
@@ -93,17 +93,17 @@
             </port>
             <port type="P2_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON2 OR KEYCODE_5PAD
+                    JOYCODE_2_BUTTON2 OR KEYCODE_1PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON3 OR KEYCODE_6PAD
+                    JOYCODE_2_BUTTON3 OR KEYCODE_5PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON1 OR KEYCODE_PLUSPAD
+                    JOYCODE_2_BUTTON1 OR KEYCODE_2PAD
                 </newseq>
             </port>
 
