--- a/ctrlr/8bitdo-pro2-saturn.cfg
+++ b/ctrlr/8bitdo-pro2-saturn.cfg
@@ -37,12 +37,12 @@
             </port>
             <port type="P1_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON2 OR KEYCODE_G
+                    JOYCODE_1_BUTTON1 OR KEYCODE_G
                 </newseq>
             </port>
             <port type="P1_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON1 OR KEYCODE_H
+                    JOYCODE_1_BUTTON2 OR KEYCODE_H
                 </newseq>
             </port>
             <port type="P1_BUTTON3">
@@ -52,27 +52,27 @@
             </port>
             <port type="P1_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON4 OR KEYCODE_G
+                    JOYCODE_1_BUTTON3 OR KEYCODE_T
                 </newseq>
             </port>
             <port type="P1_BUTTON5">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON3 OR KEYCODE_H
+                    JOYCODE_1_BUTTON4 OR KEYCODE_Y
                 </newseq>
             </port>
             <port type="P1_BUTTON6">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON5 OR KEYCODE_J
+                    JOYCODE_1_BUTTON5 OR KEYCODE_U
                 </newseq>
             </port>
             <port type="P1_BUTTON7">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON7 OR KEYCODE_K
+                    JOYCODE_1_BUTTON7 OR KEYCODE_I
                 </newseq>
             </port>
             <port type="P1_BUTTON8">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON8 OR KEYCODE_L
+                    JOYCODE_1_BUTTON8 OR KEYCODE_O
                 </newseq>
             </port>
 
@@ -108,12 +108,12 @@
             </port>
             <port type="P2_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON2 OR KEYCODE_4PAD
+                    JOYCODE_2_BUTTON1 OR KEYCODE_4PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON1 OR KEYCODE_5PAD
+                    JOYCODE_2_BUTTON2 OR KEYCODE_5PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON3">
@@ -123,12 +123,12 @@
             </port>
             <port type="P2_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON4 OR KEYCODE_7PAD
+                    JOYCODE_2_BUTTON3 OR KEYCODE_7PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON5">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON3 OR KEYCODE_8PAD
+                    JOYCODE_2_BUTTON4 OR KEYCODE_8PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON6">
@@ -138,7 +138,7 @@
             </port>
             <port type="P2_BUTTON7">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON7 OR KEYCODE_PLUSPAD
+                    JOYCODE_2_BUTTON7
                 </newseq>
             </port>
             <port type="P2_BUTTON8">
@@ -179,12 +179,12 @@
             </port>
             <port type="P3_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON2
+                    JOYCODE_3_BUTTON1
                 </newseq>
             </port>
             <port type="P3_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON1
+                    JOYCODE_3_BUTTON2
                 </newseq>
             </port>
             <port type="P3_BUTTON3">
@@ -194,12 +194,12 @@
             </port>
             <port type="P3_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON4
+                    JOYCODE_3_BUTTON3
                 </newseq>
             </port>
             <port type="P3_BUTTON5">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON3
+                    JOYCODE_3_BUTTON4
                 </newseq>
             </port>
             <port type="P3_BUTTON6">
@@ -250,12 +250,12 @@
             </port>
             <port type="P4_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON2
+                    JOYCODE_4_BUTTON1
                 </newseq>
             </port>
             <port type="P4_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON1
+                    JOYCODE_4_BUTTON2
                 </newseq>
             </port>
             <port type="P4_BUTTON3">
@@ -265,12 +265,12 @@
             </port>
             <port type="P4_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON4
+                    JOYCODE_4_BUTTON3
                 </newseq>
             </port>
             <port type="P4_BUTTON5">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON3
+                    JOYCODE_4_BUTTON4
                 </newseq>
             </port>
             <port type="P4_BUTTON6">
