--- a/ctrlr/8bitdo-pro2-snes.cfg
+++ b/ctrlr/8bitdo-pro2-snes.cfg
@@ -37,32 +37,32 @@
             </port>
             <port type="P1_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON4 OR KEYCODE_T
+                    JOYCODE_1_BUTTON3 OR KEYCODE_T
                 </newseq>
             </port>
             <port type="P1_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON2 OR KEYCODE_G
+                    JOYCODE_1_BUTTON1 OR KEYCODE_G
                 </newseq>
             </port>
             <port type="P1_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON1 OR KEYCODE_H
+                    JOYCODE_1_BUTTON2 OR KEYCODE_H
                 </newseq>
             </port>
             <port type="P1_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON3 OR KEYCODE_Y
+                    JOYCODE_1_BUTTON4 OR KEYCODE_Y
                 </newseq>
             </port>
             <port type="P1_BUTTON5">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON5 OR KEYCODE_J
+                    JOYCODE_1_BUTTON5 OR KEYCODE_U
                 </newseq>
             </port>
             <port type="P1_BUTTON6">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON6 OR KEYCODE_K
+                    JOYCODE_1_BUTTON6 OR KEYCODE_I
                 </newseq>
             </port>
 
@@ -98,32 +98,32 @@
             </port>
             <port type="P2_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON4 OR KEYCODE_7PAD
+                    JOYCODE_2_BUTTON3 OR KEYCODE_7PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON2 OR KEYCODE_4PAD
+                    JOYCODE_2_BUTTON1 OR KEYCODE_4PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON1 OR KEYCODE_5PAD
+                    JOYCODE_2_BUTTON2 OR KEYCODE_5PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON3 OR KEYCODE_8PAD
+                    JOYCODE_2_BUTTON4 OR KEYCODE_8PAD
                 </newseq>
             </port>
             <port type="P2_BUTTON5">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON5 OR KEYCODE_6PAD
+                    JOYCODE_2_BUTTON5
                 </newseq>
             </port>
             <port type="P2_BUTTON6">
                 <newseq type="standard">
-                    JOYCODE_2_BUTTON6 OR KEYCODE_PLUSPAD
+                    JOYCODE_2_BUTTON6
                 </newseq>
             </port>
 
@@ -159,22 +159,22 @@
             </port>
             <port type="P3_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON4
+                    JOYCODE_3_BUTTON3
                 </newseq>
             </port>
             <port type="P3_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON2
+                    JOYCODE_3_BUTTON1
                 </newseq>
             </port>
             <port type="P3_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON1
+                    JOYCODE_3_BUTTON2
                 </newseq>
             </port>
             <port type="P3_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_3_BUTTON3
+                    JOYCODE_3_BUTTON4
                 </newseq>
             </port>
             <port type="P3_BUTTON5">
@@ -220,22 +220,22 @@
             </port>
             <port type="P4_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON4
+                    JOYCODE_4_BUTTON3
                 </newseq>
             </port>
             <port type="P4_BUTTON2">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON2
+                    JOYCODE_4_BUTTON1
                 </newseq>
             </port>
             <port type="P4_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON1
+                    JOYCODE_4_BUTTON2
                 </newseq>
             </port>
             <port type="P4_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_4_BUTTON3
+                    JOYCODE_4_BUTTON4
                 </newseq>
             </port>
             <port type="P4_BUTTON5">
