--- a/ctrlr/8bitdo-pro2-gba.cfg
+++ b/ctrlr/8bitdo-pro2-gba.cfg
@@ -38,7 +38,7 @@
             </port>
             <port type="P1_BUTTON1">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON4 OR KEYCODE_G
+                    JOYCODE_1_BUTTON1 OR KEYCODE_G
                 </newseq>
             </port>
             <port type="P1_BUTTON2">
@@ -48,12 +48,63 @@
             </port>
             <port type="P1_BUTTON3">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON3 OR KEYCODE_J
+                    JOYCODE_1_BUTTON6 OR KEYCODE_T
                 </newseq>
             </port>
             <port type="P1_BUTTON4">
                 <newseq type="standard">
-                    JOYCODE_1_BUTTON1 OR KEYCODE_B OR KEYCODE_K
+                    JOYCODE_1_BUTTON5 OR KEYCODE_Y
+                </newseq>
+            </port>
+
+            <port tag="P2_START" type="START2">
+                <newseq type="standard">
+                    JOYCODE_2_START OR KEYCODE_2
+                </newseq>
+            </port>
+            <port tag="P2_COIN" type="COIN2">
+                <newseq type="standard">
+                    JOYCODE_2_SELECT OR KEYCODE_6
+                </newseq>
+            </port>
+            <port type="P2_JOYSTICK_UP">
+                <newseq type="standard">
+                    JOYCODE_2_HAT1UP OR KEYCODE_UP
+                </newseq>
+            </port>
+            <port type="P2_JOYSTICK_DOWN">
+                <newseq type="standard">
+                    JOYCODE_2_HAT1DOWN OR KEYCODE_DOWN
+                </newseq>
+            </port>
+            <port type="P2_JOYSTICK_LEFT">
+                <newseq type="standard">
+                    JOYCODE_2_HAT1LEFT OR KEYCODE_LEFT
+                </newseq>
+            </port>
+            <port type="P2_JOYSTICK_RIGHT">
+                <newseq type="standard">
+                    JOYCODE_2_HAT1RIGHT OR KEYCODE_RIGHT
+                </newseq>
+            </port>
+            <port type="P2_BUTTON1">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON1 OR KEYCODE_1PAD
+                </newseq>
+            </port>
+            <port type="P2_BUTTON2">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON2 OR KEYCODE_2PAD
+                </newseq>
+            </port>
+            <port type="P2_BUTTON3">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON6 OR KEYCODE_4PAD
+                </newseq>
+            </port>
+            <port type="P2_BUTTON4">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON5 OR KEYCODE_5PAD
                 </newseq>
             </port>
 
