Update path to roms

--- a/mame.ini
+++ b/mame.ini
@@ -8,7 +8,7 @@ writeconfig               0
 # CORE SEARCH PATH OPTIONS
 #
 homepath                  .
-rompath                   roms;soft
+rompath                   roms
 hashpath                  hash
 samplepath                samples
 artpath                   artwork
